--- a/views/_issue.erb
+++ b/views/_issue.erb
@@ -69,7 +69,7 @@
         </div>
       <% end %>
 
-      <span class="inline-flex items-center rounded-full bg-indigo-50 px-2 py-1 text-xs font-medium text-indigo-700 ring-1 ring-inset ring-indigo-700/10 dark:bg-indigo-500 dark:text-indigo-100 dark:ring-indigo-600"><%= issue.points || '-' %></span>
+      <span class="inline-flex items-center rounded-full bg-lime-50 px-2 py-1 text-xs font-medium text-lime-700 ring-1 ring-inset ring-lime-700/10 dark:bg-lime-600 dark:text-lime-100 dark:ring-lime-600"><%= issue.points || '-' %></span>
     </div>
   </li>
 </ul>
