--- a/views/new_project.erb
+++ b/views/new_project.erb
@@ -35,7 +35,7 @@
 
   <div class="mt-6 flex items-center gap-x-6 justify-end">
     <a href="/" class="text-sm font-semibold leading-6 text-gray-900 dark:text-gray-200 hover:underline">Cancel</a>
-    <button type="submit" data-disable-with="Saving..." class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 dark:text-gray-100 dark:bg-indigo-800 dark:hover:bg-indigo-700 dark:focus-visible:outline-indigo-700">Save</button>
+    <button type="submit" data-disable-with="Saving..." class="rounded-md bg-lime-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-lime-600 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-lime-600 dark:text-gray-100 dark:bg-lime-800 dark:hover:bg-lime-700 dark:focus-visible:outline-lime-700">Save</button>
   </div>
 </form>
 
