--- a/views/project.erb
+++ b/views/project.erb
@@ -1,14 +1,14 @@
 <div>
   <div class="sm:hidden">
-    <select id="tabs" name="tabs" class="block w-full rounded-md border-gray-300 py-2 pl-3 pr-10 text-base focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm dark:bg-gray-800 dark:text-gray-200" onchange="location = this.value;">
+    <select id="tabs" name="tabs" class="block w-full rounded-md border-gray-300 py-2 pl-3 pr-10 text-base focus:border-lime-600 focus:outline-none focus:ring-lime-600 sm:text-sm dark:bg-gray-800 dark:text-gray-200" onchange="location = this.value;">
       <option value="/projects/<%= @project.id %>" <%= 'selected' if params[:status].blank? %>>Active</option>
       <option value="/projects/<%= @project.id %>?status=completed" <%= 'selected' if params[:status] == 'completed' %>>Completed</option>
     </select>
   </div>
   <div class="hidden sm:block">
     <nav class="-mb-px flex space-x-8" aria-label="Tabs">
-      <a href="/projects/<%= @project.id %>?status=" class="whitespace-nowrap <%= params[:status].blank? ? 'text-indigo-600 dark:text-indigo-200' : 'text-gray-500 hover:text-gray-700 dark:text-gray-300 dark:hover:text-gray-200' %> px-1 py-4 text-sm font-medium" <%= 'aria-current="page"' if params[:status].blank? %>>Active</a>
-      <a href="/projects/<%= @project.id %>?status=completed" class="whitespace-nowrap <%= params[:status] == 'completed' ? 'text-indigo-600 dark:text-indigo-200' : 'text-gray-500 hover:text-gray-700 dark:text-gray-300 dark:hover:text-gray-200' %> px-1 py-4 text-sm font-medium" <%= 'aria-current="page"' if params[:status] == 'completed' %>>Completed</a>
+      <a href="/projects/<%= @project.id %>?status=" class="whitespace-nowrap <%= params[:status].blank? ? 'text-lime-600 dark:text-lime-200' : 'text-gray-500 hover:text-gray-700 dark:text-gray-300 dark:hover:text-gray-200' %> px-1 py-4 text-sm font-medium" <%= 'aria-current="page"' if params[:status].blank? %>>Active</a>
+      <a href="/projects/<%= @project.id %>?status=completed" class="whitespace-nowrap <%= params[:status] == 'completed' ? 'text-lime-600 dark:text-lime-200' : 'text-gray-500 hover:text-gray-700 dark:text-gray-300 dark:hover:text-gray-200' %> px-1 py-4 text-sm font-medium" <%= 'aria-current="page"' if params[:status] == 'completed' %>>Completed</a>
     </nav>
   </div>
 </div>
