--- a/views/sprint.erb
+++ b/views/sprint.erb
@@ -2,7 +2,7 @@
 <% content_for(:title) do %>
   <div class="flex justify-between items-center">
     <h1 class="text-2xl font-bold leading-7 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight dark:text-gray-100"><%= @title %></h1>
-    <a href="<%= request.path + '/csv' %>" rel="noopener nofollow noreferrer" class="print:hidden inline-flex items-center justify-center h-9 px-3 text-xs font-medium text-gray-900 bg-white border border-gray-200 rounded-lg focus:outline-none hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-gray-300 dark:focus:ring-gray-500 dark:bg-gray-950 dark:text-gray-100 dark:border-gray-950 dark:hover:text-gray-300 dark:hover:bg-black">
+    <a href="<%= request.path + '/csv' %>" rel="noopener nofollow noreferrer" class="print:hidden inline-flex items-center justify-center h-9 px-3 text-xs font-medium text-gray-900 bg-white border border-gray-200 rounded-lg focus:outline-none hover:bg-gray-100 hover:text-lime-700 focus:z-10 focus:ring-2 focus:ring-gray-300 dark:focus:ring-gray-500 dark:bg-gray-950 dark:text-gray-100 dark:border-gray-950 dark:hover:text-gray-300 dark:hover:bg-black">
       Download CSV
     </a>
   </div>
@@ -54,7 +54,7 @@
       <h3 class="font-semibold mb-2 dark:text-gray-200">Story Points</h3>
       <div class="flex items-center">
         <div class="w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-900">
-          <div class="bg-blue-600 h-2.5 rounded-full" style="width: <%= sprint.points == 0 ? 0 : ((sprint.points_completed.to_f / sprint.points) * 100).round %>%;"></div>
+          <div class="bg-lime-600 h-2.5 rounded-full" style="width: <%= sprint.points == 0 ? 0 : ((sprint.points_completed.to_f / sprint.points) * 100).round %>%;"></div>
         </div>
         <span class="ml-2 text-gray-700 font-semibold"><%= sprint.points == 0 ? 0 : ((sprint.points_completed.to_f / sprint.points) * 100).round %>%</span>
       </div>
