--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,8 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="favicon.png">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <title>
+    <%= @title + ' - ' if @title %>Sprintosaurus
+  </title>
 </head>
 <body class="h-full bg-gray-50 justify-center min-h-screen dark:bg-gray-950 dark:text-gray-100">
   <div class="min-h-full">
