chore: Update chart color

--- a/views/sprint.erb
+++ b/views/sprint.erb
@@ -135,9 +135,9 @@
           {
             label: 'Remaining',
             data: filteredRemainingData,
-            borderColor: 'blue',
+            borderColor: '#4d7c0f',
             fill: true,
-            backgroundColor: 'rgba(0, 0, 255, 0.1)'
+            backgroundColor: 'rgba(26, 255, 5, 0.1)'
           },
           {
             label: 'Ideal',
