--- a/views/_issue.erb
+++ b/views/_issue.erb
@@ -14,6 +14,12 @@
               <path fill-rule="evenodd" clip-rule="evenodd" d="M9 12.75 11.25 15 15 9.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
             </svg>
           </div>
+        <% elsif issue.merged? %>
+          <div class="pt-0">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16" class="size-5 text-purple-700 dark:text-purple-300" role="img" aria-label="issue-merged">
+              <path d="M5.45 5.154A4.25 4.25 0 0 0 9.25 7.5h1.378a2.251 2.251 0 1 1 0 1.5H9.25A5.734 5.734 0 0 1 5 7.123v3.505a2.25 2.25 0 1 1-1.5 0V5.372a2.25 2.25 0 1 1 1.95-.218ZM4.25 13.5a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Zm8.5-4.5a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5ZM5 3.25a.75.75 0 1 0 0 .005V3.25Z"></path>
+            </svg>
+          </div>
         <% end %>
         <p class="text-sm truncate font-semibold leading-6 text-gray-900 dark:text-gray-200"><a href="<%= issue.url %>" target="_blank" class="hover:underline"><%= issue.title %></a></p>
         <% if issue.unplanned?(sprint) %>
