--- a/views/projects.erb
+++ b/views/projects.erb
@@ -26,7 +26,7 @@
           <div class="mt-1 flex items-center gap-x-1 text-xs leading-5 text-gray-600 dark:text-gray-300">
             <p class="truncate whitespace-nowrap">
               #<%= project.number %>
-              added <time datetime="<%= project.created_at.strftime('%Y-%m-%dT%H:%MZ') %>"> <%= time_ago_in_words(project.created_at) %> ago
+              updated <time datetime="<%= project.updated_at.strftime('%Y-%m-%dT%H:%MZ') %>"> <%= time_ago_in_words(project.updated_at) %> ago
           </time>
             </p>
           </div>
