--- a/views/project.erb
+++ b/views/project.erb
@@ -61,9 +61,7 @@
   </ul>
 <% else %>
   <div class="mt-8 text-center">
-    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="mx-auto h-12 w-12 text-gray-400 dark:text-gray-600">
-      <path stroke-linecap="round" stroke-linejoin="round" d="m9 9 6-6m0 0 6 6m-6-6v12a6 6 0 0 1-12 0v-3" />
-    </svg>
+    <img src="/missing-sprint-report.png" alt="" height=256 width=256 class="rounded mx-auto">
     <h3 class="mt-2 text-sm font-semibold text-gray-900 dark:text-gray-100">No sprints found</h3>
     <p class="mt-1 text-sm text-gray-500 dark:text-gray-400">Add a Sprint to one of your Issues.</p>
   </div>
