feat: Print styles

--- a/views/sprint.erb
+++ b/views/sprint.erb
@@ -43,7 +43,7 @@
   </div>
 <% end %>
 
-<div class="w-full max-w-4xl mx-auto p-4 bg-white shadow rounded-lg dark:bg-black">
+<div class="w-full max-w-4xl mx-auto p-4 bg-white shadow rounded-lg dark:bg-black print:shadow-none">
   <div class="relative">
     <canvas id="sprintChart"></canvas>
   </div>
@@ -208,7 +208,7 @@
   });
 </script>
 
-<div class="divide-y divide-gray-200 overflow-hidden rounded-lg bg-white shadow mt-6 dark:bg-black dark:divide-gray-800">
+<div class="divide-y divide-gray-200 overflow-hidden rounded-lg bg-white shadow mt-6 dark:bg-black dark:divide-gray-800 print:shadow-none">
   <div class="px-2 py-2 sm:px-3">
     <div class="border-gray-200 bg-white px-2 py-2 sm:px-3 dark:bg-black">
       <div class="flex items-center justify-between sm:flex-nowrap">
@@ -235,7 +235,7 @@
   </div>
 </div>
 
-<div class="divide-y divide-gray-200 overflow-hidden rounded-lg bg-white shadow mt-6 dark:bg-black dark:divide-gray-800">
+<div class="divide-y divide-gray-200 overflow-hidden rounded-lg bg-white shadow mt-6 dark:bg-black dark:divide-gray-800 print:shadow-none">
   <div class="px-2 py-2 sm:px-3">
     <div class="border-gray-200 bg-white px-2 py-2 sm:px-3 dark:bg-black">
       <div class="flex items-center justify-between sm:flex-nowrap">
