--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,9 +10,9 @@
     <%= @title + ' - ' if @title %>Sprintosaurus
   </title>
 </head>
-<body class="h-full bg-gray-50 justify-center min-h-screen dark:bg-gray-950 dark:text-gray-100">
+<body class="h-full bg-gray-50 justify-center min-h-screen dark:bg-gray-950 dark:text-gray-100 print:bg-white">
   <div class="min-h-full">
-    <nav class="border-b border-gray-200 bg-white dark:bg-black dark:border-gray-700">
+    <nav class="border-b border-gray-200 bg-white dark:bg-black dark:border-gray-700 print:hidden">
       <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
         <div class="flex h-16 justify-between">
           <div class="flex">
@@ -53,7 +53,7 @@
     </nav>
 
     <div class="py-10">
-      <header>
+      <header class="print:hidden">
         <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
           <% if @breadcrumbs.present? %>
             <div class="mb-4">
@@ -81,7 +81,7 @@
         </div>
       </header>
       <main class="max-w-screen-xl mx-auto px-2 sm:px-6">
-        <div class="divide-y divide-gray-200 overflow-hidden rounded-lg bg-white shadow dark:divide-gray-800 dark:bg-gray-900 dark:text-gray-200">
+        <div class="divide-y divide-gray-200 overflow-hidden rounded-lg bg-white shadow dark:divide-gray-800 dark:bg-gray-900 dark:text-gray-200 print:shadow-none">
           <div class="px-2 py-5 sm:px-6">
             <div class="min-w-0 flex-1">
               <% if content_for? :title %>
