--- a/views/project.erb
+++ b/views/project.erb
@@ -61,8 +61,14 @@
   </ul>
 <% else %>
   <div class="mt-8 text-center">
-    <img src="/missing-sprint-report.png" alt="" height=256 width=256 class="rounded mx-auto">
-    <h3 class="mt-2 text-sm font-semibold text-gray-900 dark:text-gray-100">No sprints found</h3>
-    <p class="mt-1 text-sm text-gray-500 dark:text-gray-400">Add a Sprint to one of your Issues.</p>
+    <% if @project.created_at < 15.minutes.ago %>
+      <img src="/missing-sprint-report.png" alt="" height=256 width=256 class="rounded mx-auto">
+      <h3 class="mt-2 text-sm font-semibold text-gray-900 dark:text-gray-100">No sprints found</h3>
+      <p class="mt-1 text-sm text-gray-500 dark:text-gray-400">Add a Sprint to one of your Issues.</p>
+    <% else %>
+      <img src="/syncing-dino.png" alt="" height=256 width=256 class="rounded mx-auto">
+      <h3 class="mt-2 text-sm font-semibold text-gray-900 dark:text-gray-100">Syncing your Sprints</h3>
+      <p class="mt-1 text-sm text-gray-500 dark:text-gray-400">Your Sprints Reports will show up here. Refresh this page soon.</p>
+    <% end %>
   </div>
 <% end %>
