--- a/views/_issues_chart.erb
+++ b/views/_issues_chart.erb
@@ -78,19 +78,22 @@
           tooltip: {
             callbacks: {
               afterBody: function(context) {
-                var date = new Date("<%= sprint.start_date.to_date.strftime('%Y-%m-%d') %>T00:00:00");
-                date.setDate(date.getDate() + context[0].dataIndex);
-                var formattedDate = date.toISOString().split('T')[0];
-                var closedIssues = closedIssuesByDay[formattedDate] || [];
-                var pointsClosed = issuePointsByDay[formattedDate] || 0;
-                var tooltipText = '';
-                if (closedIssues.length > 0) {
-                  tooltipText += 'Closed issues:\n' + closedIssues.join('\n');
+                if (context[0].datasetIndex === 0) { // Only for "Remaining Issues/PRs" dataset
+                  var date = new Date("<%= sprint.start_date.to_date.strftime('%Y-%m-%d') %>T00:00:00");
+                  date.setDate(date.getDate() + context[0].dataIndex);
+                  var formattedDate = date.toISOString().split('T')[0];
+                  var closedIssues = closedIssuesByDay[formattedDate] || [];
+                  var pointsClosed = issuePointsByDay[formattedDate] || 0;
+                  var tooltipText = '';
+                  if (closedIssues.length > 0) {
+                    tooltipText += '\nClosed issues:\n' + closedIssues.join('\n');
+                    if (pointsClosed > 0) {
+                      tooltipText += '\nPoints closed: ' + pointsClosed;
+                    }
+                  }
+                  return tooltipText;
                 }
-                if (pointsClosed > 0) {
-                  tooltipText += '\nPoints closed: ' + pointsClosed;
-                }
-                return tooltipText;
+                return ''; // Return empty string for "Ideal Issues/PRs" dataset
               }
             }
           }
