--- a/views/_points_chart.erb
+++ b/views/_points_chart.erb
@@ -12,6 +12,19 @@
     var ctxPoints = document.getElementById('sprintPointsChart').getContext('2d');
     var remainingPointsData = <%= (sprint.start_date.to_date..sprint.end_date.to_date).map { |date| sprint.issues.where("closed_at IS NULL OR closed_at > ?", date.end_of_day).sum(:points) }.to_json %>;
 
+    var closedIssuesByDay = {};
+    var issuePointsByDay = {};
+    <% closed_issues.each do |issue| %>
+      var closedDate = new Date("<%= issue.closed_at.to_date.strftime('%Y-%m-%d') %>T00:00:00");
+      var formattedDate = closedDate.toISOString().split('T')[0];
+      if (!closedIssuesByDay[formattedDate]) {
+        closedIssuesByDay[formattedDate] = [];
+        issuePointsByDay[formattedDate] = 0;
+      }
+      closedIssuesByDay[formattedDate].push("#<%= issue.number %> <%= issue.title %> (<%= issue.points %> points)");
+      issuePointsByDay[formattedDate] += <%= issue.points || 0 %>;
+    <% end %>
+
     var filteredRemainingPointsData = remainingPointsData.filter((_, index) => {
       var date = new Date("<%= sprint.start_date.to_date.strftime('%Y-%m-%d') %>T00:00:00");
       date.setDate(date.getDate() + index);
@@ -70,21 +83,28 @@
           tooltip: {
             callbacks: {
               afterBody: function(context) {
-                var date = new Date("<%= sprint.start_date.to_date.strftime('%Y-%m-%d') %>T00:00:00");
-                date.setDate(date.getDate() + context[0].dataIndex);
-                var formattedDate = date.toISOString().split('T')[0];
-                var closedIssues = closedIssuesByDay[formattedDate] || [];
-                var pointsClosed = issuePointsByDay[formattedDate] || 0;
-                var tooltipText = '';
-                if (closedIssues.length > 0) {
-                  tooltipText += 'Closed issues:\n' + closedIssues.join('\n');
+                if (context[0].datasetIndex === 0) {
+                  var date = new Date("<%= sprint.start_date.to_date.strftime('%Y-%m-%d') %>T00:00:00");
+                  date.setDate(date.getDate() + context[0].dataIndex);
+                  var formattedDate = date.toISOString().split('T')[0];
+                  var closedIssues = closedIssuesByDay[formattedDate] || [];
+                  var pointsClosed = issuePointsByDay[formattedDate] || 0;
+                  var tooltipText = '';
+                  if (closedIssues.length > 0) {
+                    tooltipText += '\nClosed issues:\n' + closedIssues.join('\n');
+                  }
+                  if (pointsClosed > 0) {
+                    tooltipText += '\nPoints closed: ' + pointsClosed;
+                  }
+                  return tooltipText;
                 }
-                if (pointsClosed > 0) {
-                  tooltipText += '\nPoints closed: ' + pointsClosed;
-                }
-                return tooltipText;
+                return ''; // Return empty string for "Ideal Points" dataset
               }
             }
+          },
+          legend: {
+            display: true,
+            position: 'top'
           }
         }
       }
