--- a/views/_issue.erb
+++ b/views/_issue.erb
@@ -22,7 +22,8 @@
           </div>
         <% end %>
         <p class="text-sm truncate font-semibold leading-6 text-gray-900 dark:text-gray-200"><a href="<%= issue.url %>" target="_blank" class="hover:underline"><%= issue.title %></a></p>
-        <% if issue.unplanned?(sprint) %>
+        <% if issue.unplanned?(sprint) && params[:show_unplanned] %>
+          <% binding.pry if issue.number == 94625 %>
           <p class="mt-0.5 whitespace-nowrap rounded-md bg-yellow-50 px-1.5 py-0.5 text-xs font-medium text-yellow-700 ring-1 ring-inset ring-yellow-600/20 dark:bg-yellow-950 dark:text-yellow-200 dark:ring-yellow-200/20">Unplanned</p>
         <% end %>
       </div>
