--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="/favicon.png">
   <link rel="stylesheet" href="/tailwind.css" nonce="<%= csp_nonce %>">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js" nonce="<%= csp_nonce %>"></script>
+  <script src="/chart.js" nonce="<%= csp_nonce %>"></script>
   <title>
     <%= @title + ' - ' if @title %>Sprintosaurus
   </title>
